font changes, removed nav bar so single page, fixed spacing on elements in sidebar

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -59,6 +59,7 @@ small, .small {
 }
 
 p {
+  font-size: $type-size-6;
   margin-bottom: 1.3em;
 }
 
